kubernetes/apps/mautrix-whatsapp/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mautrix-whatsapp
spec:
  type: ClusterIP
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: mautrix-whatsapp
  ports:
    - port: 29318
      targetPort: 29318
      protocol: TCP
      name: http
