kubernetes/apps/mautrix-whatsapp/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mautrix-whatsapp-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-external
  routes:
    - match: Host(`mautrix-whatsapp.home.lungoo.de`)
      kind: Rule
      services:
        - name: mautrix-whatsapp
          port: 29318
